welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: ')' expected but ',' found.
for (k <- 1 to x-1 , i <- 0 to x-1 ){
                   ^ZigZag:13: error: illegal start of simple expression
}
^